@startuml

Personaje <|-- Humano
Personaje <|-- Zombie


class Personaje {
  id: str
  nombre: str
  energia: int
  pos_x: int
  vivo: boolean
  perseguidores: Personaje[]

  desplazar(distancia, direccion, energia)
  gritar()
  morir()
  recibir_ataque()
  perseguir(personaje)
  ser_perseguido(personaje)
  dejar_de_perseguir(personaje)
  dejar_de_ser_perseguido_por(personaje)
  __str__(): str
}


class Humano {
  necesita_ayuda: boolean
  caminar(direccion)
  correr(direccion)
  trotar(direccion)
  atacar(personaje)
  sentir_peligro_cerca()
  no_sentir_peligro()
  pedir_ayuda()
  recibir_grito()
  __str__(): str
}


class Zombie {
  caminar(direccion)
  correr(direccion)
  trotar(direccion)
  recibir_grito()
  morder(personaje): Personaje
  __str__(): str
}


class Pueblo {
  nombre: str
  personajes: Personaje[]
  add_personaje(personaje)
  hay_supervivientes()
  ordenar_personajes()
  seleccionar_personaje(id, faccion): Personaje
  comprobar_peligros_cerca()
  comprobar_peligros_personaje(personaje)
  actualizar_estado()
  get_personajes_posicion(pos_x, faccion)
  __str__(): str
}

Personaje <-- Pueblo

@enduml